# roadsafe-uk

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  styles.css
configs/: evaluation-v1.json
docs/: architecture.md  data-sources.md  limitations.md  methodology.md  product.md  roadmap.md
docs/adr/: 0001-road-segments.md  0002-batch-serving.md  0003-major-road-matching.md  0004-longitudinal-panel.md
src/roadsafe/: __init__.py  acquisition.py  cli.py  domain.py  evaluation.py  network.py  orchestration.py  pipeline.py
src/roadsafe/api/: __init__.py  app.py
tests/: test_acquisition.py  test_api.py  test_contract_build.py  test_evaluation.py  test_network.py  test_pipeline.py
tests/fixtures/: dft-aadf-west-yorkshire-2024.csv  dft-collisions-west-yorkshire-2024.csv  dft-major-roads-west-yorkshire-2024.geojson  segment-evidence-west-yorkshire-2024.geojson
