[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roadsafe-uk"
version = "0.2.0"
description = "Exposure-aware road safety screening for Great Britain"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Jeevan Mohan Pawar" }]
dependencies = [
  "fastapi>=0.116",
  "polars>=1.30",
  "pyproj>=3.7",
  "pyshp>=2.3",
  "pydantic>=2.11",
  "shapely>=2.1",
  "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.7",
  "mypy>=1.17",
  "pytest>=8.4",
  "pytest-cov>=6.2",
  "ruff>=0.12",
  "types-shapely>=2.1",
]

[project.scripts]
roadsafe = "roadsafe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["roadsafe"]
